# Explain_ai

./: Untitled-2.ipynb  hello.py  ogbg_graph_gin_ogbg-molhiv_valid.csv  pyproject.toml  s.py  sample_code_preprocess_smiles.ipynb
src/explain_ai/: function.py  model_trainer.py
src/explain_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
